done till profiles page

--- a/pages/boiler/_boiler.html
+++ b/pages/boiler/_boiler.html
@@ -13,14 +13,14 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <title>Welcome to the DevConnector</title>
+    <title>Login to your account</title>
   </head>
   <body>
     <nav class="navbar bg-dark">
@@ -32,26 +32,16 @@
           <a href="profiles.html"> Developer </a>
         </li>
         <li>
-          <a href="./pages/register.html"> Register </a>
+          <a href="register.html"> Register </a>
         </li>
         <li>
-          <a href="./pages/login.html"> Login </a>
+          <a href=" login.html"> Login </a>
         </li>
       </ul>
     </nav>
-    <section class="landing">
-      <div class="dark-overlay">
-        <div class="landing-inner">
-          <h1 class="x-large">Developer Connector</h1>
-          <p class="lead">
-            Create Developer Profile/Portfolio, share posts with other developer
-          </p>
-          <div class="buttons">
-            <a class="btn btn-primary" href="./pages/register.html">Sign Up</a>
-            <a class="btn" href="./pages/login.html">Login</a>
-          </div>
-        </div>
-      </div>
+    <section class="container">
+      <h1 class="large text-primary">HEADING</h1>
+      <p class="lead"><i class="fas fa-user"></i> TEXT</p>
     </section>
   </body>
 </html>
