--- a/pages/login.html
+++ b/pages/login.html
@@ -1,63 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
     <title>Login to your account</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar bg-dark">
-        <h1>
-            <a href="dashboard.html">
-                <i class="fas fa-code"></i> DevConnector
-            </a>
-        </h1>
-        <ul>
-            <li>
-                <a href="profiles.html">
-                    Developer
-                </a>
-            </li>
-            <li>
-            <a href="register.html">
-                Register
-            </a>
-            </li>
-            <li>
-            <a href=" login.html">
-                Login
-            </a>
-            </li>
-        </ul>
+      <h1>
+        <a href="dashboard.html"> <i class="fas fa-code"></i> DevConnector </a>
+      </h1>
+      <ul>
+        <li>
+          <a href="profiles.html"> Developer </a>
+        </li>
+        <li>
+          <a href="register.html"> Register </a>
+        </li>
+        <li>
+          <a href=" login.html"> Login </a>
+        </li>
+      </ul>
     </nav>
     <section class="container">
-        <h1 class="large text-primary">
-			Sign In
-		</h1>
-		<p class="lead">
-			<i class="fas fa-user"></i>
-			Login to your Account
-		</p>
-		<form class="form" action="dashboard.html" method="post">
-			<div class="form-group">
-				<input type="email" placeholder="Email Address">
-			</div>
-			<div class="form-group">
-				<input type="password" placeholder="Paasword" minlength="6">
-			</div>
-			<input type="submit" value="Sign In" class="btn btn-primary">
-			<p class="my-1">
-				Don't have an Account?<a href="register.html">  Register</a>
-			</p>
-		</form>
+      <!-- Alert -->
+      <div class="alert alert-danger">Invalid Credentials</div>
+      <h1 class="large text-primary">Sign In</h1>
+      <p class="lead">
+        <i class="fas fa-user"></i>
+        Login to your Account
+      </p>
+      <form class="form" action="dashboard.html" method="post">
+        <div class="form-group">
+          <input type="email" placeholder="Email Address" />
+        </div>
+        <div class="form-group">
+          <input type="password" placeholder="Paasword" minlength="6" />
+        </div>
+        <input type="submit" value="Sign In" class="btn btn-primary" />
+        <p class="my-1">
+          Don't have an Account?<a href="register.html"> Register</a>
+        </p>
+      </form>
     </section>
-</body>
+  </body>
 </html>
