--- a/pages/profile.html
+++ b/pages/profile.html
@@ -143,7 +143,7 @@
           <h2 class="text-primary lead my-1">
             <i class="fab fa-github"></i> GitHub Repos
           </h2>
-          <div class="repo bg-white my-1">
+          <div class="repo bg-white my-1 p-1">
             <div>
               <h4><a href="#">Repo One</a></h4>
               <p>
@@ -159,7 +159,7 @@
               </ul>
             </div>
           </div>
-          <div class="repo bg-white my-1">
+          <div class="repo bg-white my-1 p-1">
             <div>
               <h4><a href="#">Repo Two</a></h4>
               <p>
@@ -175,7 +175,7 @@
               </ul>
             </div>
           </div>
-          <div class="repo bg-white my-1">
+          <div class="repo bg-white my-1 p-1">
             <div>
               <h4><a href="#">Repo Three</a></h4>
               <p>
