--- a/pages/create-profile.html
+++ b/pages/create-profile.html
@@ -49,8 +49,12 @@
       </ul>
     </nav>
     <section class="container">
-      <h1 class="large text-primary">HEADING</h1>
-      <p class="lead"><i class="fas fa-user"></i> TEXT</p>
+      <h1 class="large text-primary">Create Your Profile</h1>
+      <p class="lead">
+        <i class="fas fa-user"></i> Lets get some information to make your
+        profile stand out
+      </p>
+      <small>*=required fields </small>
     </section>
   </body>
 </html>
